# ChangeLog for sys-apps/openrc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.56 2009/01/01 13:04:04 hollow Exp $

  01 Jan 2009; Benedikt Böhm <hollow@gentoo.org>
  +files/0.4.0/0005-init-script-novserver.patch:
  fix dmesg and sysfs init script inside vservers, bug #253105

  31 Dec 2008; Doug Goldstein <cardoe@gentoo.org> openrc-0.4.1-r1.ebuild,
  openrc-9999.ebuild:
  invert module-init-tools depend so we're not always pulling it in. the
  depend was to avoid a specific issue with older module-init-tools

  30 Dec 2008; Doug Goldstein <cardoe@gentoo.org> openrc-0.4.1-r1.ebuild,
  openrc-9999.ebuild:
  remove old clock init script forcibly during the upgrade since it appears
  to cause problems. bug #252380

*openrc-0.4.1-r1 (29 Dec 2008)

  29 Dec 2008; Doug Goldstein <cardoe@gentoo.org>
  -files/0.3.0/0001-Fix-a-segfault-when-profile.env-does-not-exist.patch,
  -files/0.3.0/0005-add-back-KV_-funcs.patch,
  +files/0.4.0/0004-s-s-d-retry.patch,
  -files/0.3.0/0003-This-reverts-commit-0e2f160c95b15e95f3885e3f5a3670ec.pat
  ch, -files/0.3.0/0006-Fix-tests-Gentoo-240350.patch,
  -files/0.3.0/0002-kenv-is-not-always-available.patch,
  -files/0.3.0/0007-Fix-utmp-permissions-Gentoo-240437.patch,
  -files/0.3.0/0004-add-a-softlevel-function-to-the-API-so-people-dont.patch
  , -files/0.3.0/0008-Clean-up-warnings-regarding-printf.patch,
  -openrc-0.3.0-r1.ebuild, -openrc-0.4.0.ebuild, -openrc-0.4.1.ebuild,
  +openrc-0.4.1-r1.ebuild:
  fix s-s-d signals on retry. bug #252621. remove old versions

  24 Dec 2008; Matthias Schwarzott <zzam@gentoo.org> openrc-0.4.1.ebuild:
  Fix patches directory, bug #252340. Update ebuild to match the old 0.4.0
  ebuild.

*openrc-0.4.1 (23 Dec 2008)

  23 Dec 2008; Doug Goldstein <cardoe@gentoo.org> +openrc-0.4.1.ebuild:
  version bump. fixes s-s-d process matching and segfaults. fixes