@@ -2,5 +2,9 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>base-system</herd>
-<!-- Upstream is Roy Marples <roy@marples.name> CC him on bugs -->
+<maintainer>
+<email>roy@marples.name</email>
+<name>Roy Marples</name>
+<description>Upstream - please CC him on bugs</description>
+</maintainer>
 </pkgmetadata>
