@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.56 2009/01/01 13:04:04 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.57 2009/01/03 06:36:44 jer Exp $
+
+  03 Jan 2009; Jeroen Roovers <jer@gentoo.org> metadata.xml:
+  Change comment into useable tags.
 
   01 Jan 2009; Benedikt Böhm <hollow@gentoo.org>
   +files/0.4.0/0005-init-script-novserver.patch:
